# postgres_lsp

./: .cursorignore  .env  .gitignore  .gitmodules  3  404.html  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SomeFile.txt  biome.jsonc  clippy.toml  docker-compose.yml  expanded.rs  flake.nix  index.html  justfile  mkdocs.yml  package.json  pglsp.toml  pglt.jsonc  pglt.toml  postgrestools.jsonc  pyproject.toml  rust-toolchain.toml  rustfmt.toml  sitemap.xml  test.sql
crates/codegen/: Cargo.toml
crates/codegen/src/: get_child_token_range.rs  get_child_tokens.rs  get_children.rs  get_location.rs  get_node_properties.rs  get_nodes.rs  lib.rs  parser.rs  syntax_kind.rs
crates/completions/: Cargo.toml
crates/completions/src/: builder.rs  lib.rs  providers.rs
crates/ide/: Cargo.toml
crates/ide/src/: lib.rs  lint.rs  pg_query.rs  tree_sitter.rs  typecheck_sqlx.rs
crates/ide/src/features/: hover.rs
crates/inlay_hints/: Cargo.toml
crates/inlay_hints/src/: functions_args.rs  inlay_hint.rs  lib.rs
crates/lint/: Cargo.toml
crates/lint/src/: lib.rs
crates/lint/src/rules/: ban_drop_column.rs  mod.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: capabilities.rs  client.rs  config.rs  dispatch.rs  global_state.rs  lib.rs  main.rs  main_loop.rs  server.rs  utils.rs
crates/lsp/src/handlers/: notification.rs
crates/lsp/src/server/: dispatch.rs  options.rs
crates/lsp/src/utils/: from_proto.rs  line_index_ext.rs  to_proto.rs
crates/parser/: Cargo.toml
crates/parser/proto/: source.proto
crates/parser/src/: codegen.rs  estimate_node_range.rs  event_buffer.rs  event_sink.rs  get_child_token_range_codegen.rs  get_child_tokens_codegen.rs  get_children_codegen.rs  get_location_codegen.rs  get_nodes_codegen.rs  lexer.rs  lib.rs  notes.md  parser.rs  parser_new.rs  pg_query_utils.rs  pg_query_utils_generated.rs  pg_query_utils_generated_test.rs  pg_query_utils_manual.rs  resolve_locations.rs  resolve_tokens.rs  sibling_token.rs  source_file.rs  source_file_lexer.rs  source_file_parsing.rs  source_parser.rs  statement.rs  statement_lexer.rs  statement_parser.rs  statement_parsing.rs  syntax_kind.rs  syntax_kind_codegen.rs  syntax_kind_generated.rs  syntax_node.rs  token_type.rs
crates/parser/src/parse/: libpg_query_node.rs  mod.rs  source.rs  statement.rs  statement_start.rs
crates/parser/src/parsers/: mod.rs  source_parser.rs
crates/parser/tests/: skipped.txt  statement_parser_test.rs
crates/parser/tests/common/: mod.rs
crates/pg_analyse/: Cargo.toml
crates/pg_analyse/src/: categories.rs  context.rs  diagnostics.rs  filter.rs  lib.rs  macros.rs  matcher.rs  options.rs  registry.rs  rule.rs  signals.rs
crates/pg_analyser/: CONTRIBUTING.md  Cargo.toml
crates/pg_analyser/src/: lib.rs  lint.rs  options.rs
crates/pg_analyser/src/lint/: safety.rs
crates/pg_base_db/: Cargo.toml
crates/pg_base_db/src/: change.rs  document.rs  lib.rs  path.rs
crates/pg_cli/: Cargo.toml
crates/pg_cli/src/: changed.rs  cli_options.rs  diagnostics.rs  lib.rs  logging.rs  main.rs  metrics.rs  panic.rs
crates/pg_cli/src/commands/: check.rs  clean.rs  daemon.rs  init.rs  mod.rs  version.rs
crates/pg_cli/src/execute/: diagnostics.rs  mod.rs  process_file.rs  std_in.rs  traverse.rs
crates/pg_cli/src/reporter/: github.rs  gitlab.rs  json.rs  junit.rs  mod.rs  terminal.rs
crates/pg_cli/src/service/: mod.rs  unix.rs  windows.rs
crates/pg_completions/: Cargo.toml  README.md
crates/pg_completions/src/: builder.rs  complete.rs  context.rs  data.rs  item.rs  lib.rs  providers.rs  relevance.rs  test_helper.rs
crates/pg_completions/src/providers/: columns.rs  functions.rs  mod.rs  tables.rs
crates/pg_configuration/: Cargo.toml
crates/pg_configuration/src/: database.rs  diagnostics.rs  files.rs  generated.rs  lib.rs  migrations.rs  vcs.rs
crates/pg_configuration/src/analyser/: mod.rs
crates/pg_console/: Cargo.toml  README.md
crates/pg_console/src/: fmt.rs  lib.rs  markup.rs  utils.rs
crates/pg_console/src/write/: html.rs  termcolor.rs
crates/pg_console/tests/: macro.rs
crates/pg_console/tests/markup/: closing_element_standalone.rs  element_non_ident_name.rs  invalid_group.rs  (+20 more)
crates/pg_diagnostics/: Cargo.toml
crates/pg_diagnostics/src/: adapters.rs  advice.rs  context.rs  diagnostic.rs  display.rs  display_github.rs  error.rs  lib.rs  location.rs  serde.rs  suggestion.rs
crates/pg_diagnostics_macros/: Cargo.toml
crates/pg_diagnostics_macros/src/: generate.rs
crates/pg_fs/: Cargo.toml
crates/pg_fs/src/: dir.rs  fs.rs  lib.rs  path.rs
crates/pg_hover/: Cargo.toml
crates/pg_hover/src/: lib.rs  resolve.rs
crates/pg_inlay_hints/: Cargo.toml  README.md
crates/pg_inlay_hints/src/: functions_args.rs  inlay_hint.rs
crates/pg_lexer/: Cargo.toml  README.md
crates/pg_lexer/src/: codegen.rs  lib.rs
crates/pg_lexer_codegen/: Cargo.toml  README.md
crates/pg_lexer_codegen/src/: lib.rs  syntax_kind.rs
crates/pg_lint/: Cargo.toml
crates/pg_lint/src/: lib.rs  violations.rs
crates/pg_linter/: Cargo.toml
crates/pg_linter/src/: lib.rs  lint.rs  options.rs  registry.rs
crates/pg_lsp/: Cargo.toml
crates/pg_lsp/src/: b_server.rs  capabilities.rs  client.rs  db_connection.rs  debouncer.rs  diagnostics.rs  lib.rs  main.rs  server.rs  session.rs  utils.rs  workspace_handler.rs
crates/pg_lsp_new/: Cargo.toml
crates/pg_lsp_new/src/: capabilities.rs  diagnostics.rs  documents.rs  handlers.rs  lib.rs  main.rs  server.rs  session.rs  utils.rs
crates/pg_query_ext/: Cargo.toml
crates/pg_query_ext/src/: codegen.rs  diagnostics.rs  lib.rs
crates/pg_query_ext_codegen/: Cargo.toml
crates/pg_query_ext_codegen/src/: get_location.rs  get_node_properties.rs  get_nodes.rs  lib.rs  node_iterator.rs
xtask/: Cargo.toml
xtask/codegen/: Cargo.toml
xtask/codegen/src/: generate_analyser.rs  generate_bindings.rs  generate_configuration.rs  generate_crate.rs  generate_new_analyser_rule.rs  lib.rs  main.rs  promote_rule.rs
xtask/rules_check/: Cargo.toml
xtask/rules_check/src/: lib.rs
xtask/src/: flags.rs  glue.rs  install.rs  lib.rs  main.rs
(+6909 files in other folders)
