[workspace]
members  = ["crates/*", "lib/*", "xtask/codegen", "xtask/rules_check", "docs/codegen"]
resolver = "2"

[workspace.package]
authors      = ["Supabase Communnity"]
categories   = ["development-tools", "postgres", "supabase"]
edition      = "2024"
homepage     = "https://supabase.com/"
keywords     = ["linter", "typechecker", "postgres", "language-server"]
license      = "MIT"
repository   = "https://github.com/supabase-community/postgres_lsp"
rust-version = "1.85.0"

[workspace.dependencies]
# supporting crates unrelated to postgres
anyhow                   = "1.0.92"
biome_deserialize        = "0.6.0"
biome_deserialize_macros = "0.6.0"
biome_string_case        = "0.5.8"
bpaf                     = { version = "0.9.15", features = ["derive"] }
crossbeam                = "0.8.4"
enumflags2               = "0.7.10"
ignore                   = "0.4.23"
indexmap                 = { version = "2.6.0", features = ["serde"] }
insta                    = "1.31.0"
line_index               = { path = "./lib/line_index", version = "0.0.0" }
pg_query                 = "6.0.0"
proc-macro2              = "1.0.66"
quote                    = "1.0.33"
rayon                    = "1.10.0"
regex                    = "1.11.1"
rustc-hash               = "2.0.0"
schemars                 = { version = "0.8.22", features = ["indexmap2", "smallvec"] }
serde                    = "1.0.195"
serde_json               = "1.0.114"
similar                  = "2.6.0"
smallvec                 = { version = "1.13.2", features = ["union", "const_new", "serde"] }
sqlx                     = { version = "0.8.2", features = ["runtime-async-std", "tls-rustls", "postgres", "json"] }
syn                      = "1.0.109"
termcolor                = "1.4.1"
text-size                = "1.1.1"
tokio                    = { version = "1.40.0", features = ["full"] }
toml                     = "0.8.19"
tower-lsp                = "0.20.0"
tracing                  = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber       = "0.3.18"
tree-sitter              = "0.20.10"
tree_sitter_sql          = { path = "./lib/tree_sitter_sql", version = "0.0.0" }
unicode-width            = "0.1.12"

# postgres specific crates
pglt_analyse                = { path = "./crates/pglt_analyse", version = "0.0.0" }
pglt_analyser               = { path = "./crates/pglt_analyser", version = "0.0.0" }
pglt_base_db                = { path = "./crates/pglt_base_db", version = "0.0.0" }
pglt_cli                    = { path = "./crates/pglt_cli", version = "0.0.0" }
pglt_commands               = { path = "./crates/pglt_commands", version = "0.0.0" }
pglt_completions            = { path = "./crates/pglt_completions", version = "0.0.0" }
pglt_configuration          = { path = "./crates/pglt_configuration", version = "0.0.0" }
pglt_console                = { path = "./crates/pglt_console", version = "0.0.0" }
pglt_diagnostics            = { path = "./crates/pglt_diagnostics", version = "0.0.0" }
pglt_diagnostics_categories = { path = "./crates/pglt_diagnostics_categories", version = "0.0.0" }
pglt_diagnostics_macros     = { path = "./crates/pglt_diagnostics_macros", version = "0.0.0" }
pglt_flags                  = { path = "./crates/pglt_flags", version = "0.0.0" }
pglt_fs                     = { path = "./crates/pglt_fs", version = "0.0.0" }
pglt_lexer                  = { path = "./crates/pglt_lexer", version = "0.0.0" }
pglt_lexer_codegen          = { path = "./crates/pglt_lexer_codegen", version = "0.0.0" }
pglt_lint                   = { path = "./crates/pglt_lint", version = "0.0.0" }
pglt_lsp                    = { path = "./crates/pglt_lsp", version = "0.0.0" }
pglt_lsp_converters         = { path = "./crates/pglt_lsp_converters", version = "0.0.0" }
pglt_markup                 = { path = "./crates/pglt_markup", version = "0.0.0" }
pglt_query_ext              = { path = "./crates/pglt_query_ext", version = "0.0.0" }
pglt_query_ext_codegen      = { path = "./crates/pglt_query_ext_codegen", version = "0.0.0" }
pglt_query_proto_parser     = { path = "./crates/pglt_query_proto_parser", version = "0.0.0" }
pglt_schema_cache           = { path = "./crates/pglt_schema_cache", version = "0.0.0" }
pglt_statement_splitter     = { path = "./crates/pglt_statement_splitter", version = "0.0.0" }
pglt_text_edit              = { path = "./crates/pglt_text_edit", version = "0.0.0" }
pglt_treesitter_queries     = { path = "./crates/pglt_treesitter_queries", version = "0.0.0" }
pglt_type_resolver          = { path = "./crates/pglt_type_resolver", version = "0.0.0" }
pglt_typecheck              = { path = "./crates/pglt_typecheck", version = "0.0.0" }
pglt_workspace              = { path = "./crates/pglt_workspace", version = "0.0.0" }

pglt_test_macros = { path = "./crates/pglt_test_macros" }
pglt_test_utils  = { path = "./crates/pglt_test_utils" }

docs_codegen = { path = "./docs/codegen", version = "0.0.0" }

[profile.dev.package]
insta.opt-level = 3
