[project]
name = "postgrestools"
version = "0.1.0"
description = "A collection of language tools and a Language Server Protocol (LSP) implementation for Postgres, focusing on developer experience and reliable SQL tooling."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-github-admonitions-plugin>=0.0.3",
]
