[package]
name = "codegen"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
pg_query_proto_parser.workspace = true
syn = { version = "2.0.35", features = ["full"] }
regex = "1.9.5"

[lib]
proc-macro = true
doctest = false

