[package]
name = "ide"
version = "0.0.0"
edition = "2021"

[dependencies]
text-size = "1.1.1"
dashmap = "5.5.3"
base_db.workspace =  true
hover.workspace =  true
sql_parser.workspace = true
diagnostics.workspace = true
tree-sitter.workspace = true
schema_cache.workspace = true
tree_sitter_sql.workspace = true
tracing.workspace = true

[dev-dependencies]

[lib]
doctest = false

[features]
