[package]
name = "inlay_hints"
version = "0.0.0"
edition = "2021"

[dependencies]
text-size = "1.1.1"
sql_parser.workspace = true
schema_cache.workspace = true
type_resolver.workspace = true
tree-sitter.workspace = true
tree_sitter_sql.workspace = true
sqlx = { version = "0.7.3", features = [ "runtime-async-std", "tls-rustls", "postgres", "json" ] }

[dev-dependencies]
async-std = "1.12.0"

[lib]
doctest = false

[features]
