[package]
name = "lint"
version = "0.0.0"
edition = "2021"

[dependencies]
text-size = "1.1.1"
sql_parser.workspace = true
base_db.workspace = true
tracing.workspace = true
serde_plain = "1.0"
serde = "1.0.195"
lazy_static = "1.4.0"
serde_json = "1.0"

[dev-dependencies]

[lib]
doctest = false

[features]
