[package]
name = "lsp"
version = "0.0.0"
edition = "2021"

[dependencies]
lsp-server = "0.7.6"
anyhow = "1.0.80"
lsp-types = "0.95.0"
serde = "1.0.197"
serde_json = "1.0.114"
crossbeam-channel.workspace = true
num_cpus = "1.15.0"

schema_cache.workspace = true
stdx.workspace = true

[lib]
doctest = false

[[bin]]
name = "postgres_lsp"
path = "src/bin/main.rs"
