[package]
name = "lsp"
version = "0.0.0"
edition = "2021"

[dependencies]
lsp-server = "0.7.6"
crossbeam-channel = "0.5.12"
lsp-types = "0.95.0"
serde = "1.0.195"
serde_json = "1.0.114"
anyhow = "1.0.81"
threadpool = "1.8.1"
line_index.workspace = true
base_db.workspace = true
dashmap = "5.5.3"
cstree = { version = "0.12.0" }

[dev-dependencies]

[lib]
doctest = false

[features]
