[package]
name = "parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.4"
cstree = { version = "0.12.0", features = ["derive"] }
pg_query = "0.8"
serde_json = "1.0"
regex = "1.9.1"
env_logger = { version = "0.9.1" }
log = { version = "0.4.20" }

codegen.workspace = true
pg_query_proto_parser.workspace = true

[dev-dependencies]
insta = "1.31.0"

[lib]
doctest = false

[features]
lazy_cell = []
