
[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pg_analyse"
repository.workspace = true
version              = "0.0.0"


[dependencies]
pg_console.workspace      = true
pg_diagnostics.workspace  = true
pg_query_ext.workspace    = true
pg_schema_cache.workspace = true
rustc-hash                = { workspace = true }

biome_deserialize        = { workspace = true, optional = true }
biome_deserialize_macros = { workspace = true, optional = true }
enumflags2.workspace     = true
serde                    = { workspace = true, features = ["derive"], optional = true }
text-size.workspace      = true
schemars                 = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "dep:schemars", "dep:biome_deserialize", "dep:biome_deserialize_macros"]
