[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pg_base_db"
repository.workspace = true
version              = "0.0.0"


[dependencies]
line_index.workspace = true
text-size.workspace  = true

pg_fs.workspace                 = true
pg_statement_splitter.workspace = true

[dev-dependencies]

[lib]
doctest = false

[features]
