[package]
name = "pg_cli"
version = "0.0.0"
edition = "2021"

[dependencies]
pg_console         = { workspace = true }
pg_configuration         = { workspace = true }
pg_fs         = { workspace = true }
pg_lsp_new         = { workspace = true }
pg_workspace_new         = { workspace = true }
pg_diagnostics         = { workspace = true }
bpaf                     = { workspace = true, features = ["bright-color"] }
tracing                  = { workspace = true }
tracing-appender         = "0.2.3"
tracing-subscriber       = { workspace = true, features = ["env-filter", "json"] }
tracing-tree             = "0.4.0"
hdrhistogram             = { version = "7.5.4", default-features = false }
rustc-hash               = { workspace = true }
tokio                    = { workspace = true, features = ["io-std", "io-util", "net", "time", "rt", "sync", "rt-multi-thread", "macros"] }

[target.'cfg(unix)'.dependencies]
libc  = "0.2.161"
tokio = { workspace = true, features = ["process"] }

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.43"

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dependencies]
tikv-jemallocator = "0.6.0"

[dev-dependencies]

[lib]
doctest = false

[features]
