[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pg_cli"
repository.workspace = true
version              = "0.0.0"


[dependencies]
anyhow             = { workspace = true }
bpaf               = { workspace = true, features = ["bright-color"] }
crossbeam          = { workspace = true }
dashmap            = "5.5.3"
hdrhistogram       = { version = "7.5.4", default-features = false }
path-absolutize    = { version = "3.1.1", optional = false, features = ["use_unix_paths_on_wasm"] }
pg_configuration   = { workspace = true }
pg_console         = { workspace = true }
pg_analyse         = { workspace = true }
pg_diagnostics     = { workspace = true }
pg_flags           = { workspace = true }
pg_fs              = { workspace = true }
pg_lsp_new         = { workspace = true }
pg_text_edit       = { workspace = true }
pg_workspace_new   = { workspace = true }
quick-junit        = "0.5.0"
rayon              = { workspace = true }
rustc-hash         = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
tokio              = { workspace = true, features = ["io-std", "io-util", "net", "time", "rt", "sync", "rt-multi-thread", "macros"] }
tracing            = { workspace = true }
tracing-appender   = "0.2.3"
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-tree       = "0.4.0"

[target.'cfg(unix)'.dependencies]
libc  = "0.2.161"
tokio = { workspace = true, features = ["process"] }

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.43"

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dependencies]
tikv-jemallocator = "0.6.0"

[dev-dependencies]

[lib]
doctest = false

[features]
