[package]
name = "pg_completions"
version = "0.0.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
sqlx = { version = "0.7.3", features = [ "runtime-async-std", "tls-rustls", "postgres", "json" ] }

text-size = "1.1.1"

tree-sitter.workspace = true
tree_sitter_sql.workspace = true
pg_schema_cache.workspace = true

[dev-dependencies]

[lib]
doctest = false

[features]
