[package]
name = "pg_completions"
version = "0.0.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"

text-size = "1.1.1"

tree-sitter.workspace = true
tree_sitter_sql.workspace = true
pg_schema_cache.workspace = true
pg_test_utils.workspace = true

sqlx.workspace = true

tokio = { version = "1.41.1", features = ["full"] }

[lib]
doctest = false

[features]
