[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pg_completions"
repository.workspace = true
version              = "0.0.0"


[dependencies]
async-std = "1.12.0"

text-size.workspace = true

pg_schema_cache.workspace = true
tree-sitter.workspace     = true
tree_sitter_sql.workspace = true

sqlx.workspace = true

tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
pg_test_utils.workspace = true

[lib]
doctest = false

[features]
