[package]
name = "pg_configuration"
version = "0.0.0"
edition = "2021"

[dependencies]
schemars                 = { workspace = true, features = ["indexmap1"], optional = true }
serde                    = { workspace = true, features = ["derive"] }
serde_json               = { workspace = true, features = ["raw_value"] }
biome_deserialize              = { workspace = true }
biome_deserialize_macros              = { workspace = true }
bpaf                     = { workspace = true }
pg_diagnostics                     = { workspace = true }
pg_console                     = { workspace = true }
toml = { workspace = true }

[lib]
doctest = false

[features]
schema = [
  "dep:schemars"
]

