[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pg_configuration"
repository.workspace = true
version              = "0.0.0"


[dependencies]
biome_deserialize        = { workspace = true }
biome_deserialize_macros = { workspace = true }
bpaf                     = { workspace = true }
pg_console               = { workspace = true }
pg_diagnostics           = { workspace = true }
schemars                 = { workspace = true, features = ["indexmap1"], optional = true }
serde                    = { workspace = true, features = ["derive"] }
serde_json               = { workspace = true, features = ["raw_value"] }
text-size                = { workspace = true }
toml                     = { workspace = true }

[lib]
doctest = false

[features]
schema = ["dep:schemars"]
