[package]
name = "pg_console"
version = "0.0.0"
edition = "2021"

[dependencies]
pg_markup         = { workspace = true }
text-size         = { workspace = true }

serde                = { workspace = true, optional = true, features = ["derive"] }
termcolor            = { workspace = true }
unicode-segmentation = "1.12.0"
unicode-width        = { workspace = true }

[dev-dependencies]
trybuild = "1.0.99"

[lib]
doctest = false

[features]
