[package]
name = "pg_fs"
version = "0.0.0"
edition = "2021"

[dependencies]
directories       = "5.0.1"
tracing           = { workspace = true }
serde = { workspace = true }
parking_lot       = { version = "0.12.3", features = ["arc_lock"] }
rayon             = { workspace = true }
rustc-hash        = { workspace = true }
pg_diagnostics = { workspace = true }
crossbeam         = { workspace = true }
smallvec          = { workspace = true }
enumflags2        = { workspace = true }

[dev-dependencies]

[lib]
doctest = false

[features]
