[package]
name = "pg_hover"
version = "0.0.0"
edition = "2021"

[dependencies]
text-size.workspace = true
pg_query_ext.workspace = true
pg_schema_cache.workspace = true
pg_syntax.workspace = true
tree-sitter.workspace = true
tree_sitter_sql.workspace = true

[dev-dependencies]

[lib]
doctest = false

[features]
