[package]
name = "pg_inlay_hints"
version = "0.0.0"
edition = "2021"

[dependencies]
text-size = "1.1.1"
pg_query_ext.workspace = true
pg_schema_cache.workspace = true
pg_type_resolver.workspace = true
pg_syntax.workspace = true
tree-sitter.workspace = true
tree_sitter_sql.workspace = true
sqlx.workspace = true

[dev-dependencies]
async-std = "1.12.0"

[lib]
doctest = false

[features]
