[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pg_inlay_hints"
repository.workspace = true
version              = "0.0.0"


[dependencies]
pg_query_ext.workspace     = true
pg_schema_cache.workspace  = true
pg_syntax.workspace        = true
pg_type_resolver.workspace = true
sqlx.workspace             = true
text-size.workspace        = true
tree-sitter.workspace      = true
tree_sitter_sql.workspace  = true

[dev-dependencies]
async-std               = "1.12.0"
pg_test_utils.workspace = true


[lib]
doctest = false

[features]
