[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pg_lint"
repository.workspace = true
version              = "0.0.0"


[dependencies]
lazy_static            = "1.4.0"
pg_base_db.workspace   = true
pg_query_ext.workspace = true
pg_syntax.workspace    = true
serde.workspace        = true
serde_json.workspace   = true
serde_plain            = "1.0"
text-size.workspace    = true

[dev-dependencies]

[lib]
doctest = false

[features]
